@@ -64,13 +64,13 @@ OUTPUTFORMATS = [ PlainTextFormat('utf-8',['txt']) ]
 #                        its output files.
 #     $STATUSFILE      - Filename of the .status file where the system 
 #                        should output status messages. 
-#     $CONFFILE        - Filename of the clam.xml file describing the 
+#     $DATAFILE        - Filename of the clam.xml file describing the 
 #                        system and chosen configuration.
 #     $USERNAME        - The username of the currently logged in user
 #                        (set to "anonymous" if there is none)
 #     $PARAMETERS      - List of chosen parameters, using the specified flags
 #
-COMMAND = sys.path[0] + "/tests/testwrapper.py $CONFFILE $STATUSFILE $OUTPUTDIRECTORY > $OUTPUTDIRECTORY/log"
+COMMAND = sys.path[0] + "/tests/testwrapper.py $DATAFILE $STATUSFILE $OUTPUTDIRECTORY > $OUTPUTDIRECTORY/log"
 
 #The parameters are subdivided into several group. In the form of a list of (groupname, parameters) tuples. The parameters are a list of instances from common/parameters.py
 PARAMETERS =  [ 
