@@ -34,3 +34,6 @@ April:
     - Implemented parameter forbid, require
     - Improved settings import, removed globals
     - Implemented user authentication
+    - Catch errors from the system 
+    - Fixed bugs, render parameter groups
+
